--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "build": "tsc"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.10.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12",
+    "ts-node": "^10.9.1",
+    "typeorm": "^0.3.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -21,6 +23,6 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^4.9.3"
   }
 }
